HSI-946 No funciona paginador de personas en backoffice