@@ -1,22 +1,20 @@
 package net.pladema.person.controller;
 
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import org.springframework.data.domain.Example;
-import org.springframework.data.domain.ExampleMatcher;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-
 import lombok.RequiredArgsConstructor;
 import net.pladema.person.repository.PersonRepository;
 import net.pladema.person.repository.entity.Person;
 import net.pladema.sgx.backoffice.repository.BackofficeStore;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.ExampleMatcher;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,8 +28,10 @@ public class BackofficePersonStore implements BackofficeStore<Person, Integer> {
 		if ((entity.getIdentificationNumber() != null))
 			entity.setIdentificationNumber(entity.getIdentificationNumber().replace(".", ""));
 		List<Integer> activePersonIds = personRepository.findAllActive();
-		List<Person> result =  personRepository.findAll(buildExample(entity), PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), pageable.getSort()))
-				.filter(p -> activePersonIds.contains(p.getId())).toList();
+		List<Person> result =  personRepository.findAll(buildExample(entity), pageable.getSort())
+				.stream()
+				.filter(p -> activePersonIds.contains(p.getId()))
+				.collect(Collectors.toList());
 		int minIndex = pageable.getPageNumber() * pageable.getPageSize();
 		int maxIndex = minIndex + pageable.getPageSize();
 		return new PageImpl<>(result.subList(minIndex, Math.min(maxIndex, result.size())), pageable, result.size());
